--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "manifest_version": 3,
     "permissions": [
         "activeTab",
-        "tabs"
+        "tabs","webRequest", "webRequestBlocking", "storage"
     ],
     "action": {
         "default_title": "Url Blocker",
@@ -17,7 +17,7 @@
     },
     "content_scripts": [
         {
-          "matches": ["https://*/*"],
+          "matches": ["<all_urls>"],
           "js": ["Logic.js"]
         }
       ]
